--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "Observer",
-	"title": "Observer",
+	"name": "SignalTree",
+	"title": "SignalTree",
 	"description": "A pub/sub module with hierarchical topic structure",
 	"version": "0.1.0",
 	"homepage": "https://github.com/jkroso/Observer",
@@ -22,6 +22,8 @@
 		}
 	],
 	"dependencies": {
+		"Topic.js" : true,
+		"Subscription.js" : true
 	},
 	"keywords": []
 }
